@@ -20,7 +20,8 @@ ImpressCMS ChangeLog
 * #2324673: Content page edit button shown on user side for wrong groups (real_therplima)
 * #2333245: Setting managed groups when creating a new group failed (skenow)
 * #2353878: HTML editor for the disclaimer(felix)
-* Security issue in SESSION id (malanciault)
+* #2354713: Security issue in SESSION id (vaughan/malanciault)
+* #2316581: When viewing comments in Threaded View it does not display the threads right and add's a > with the title twice (malanciault)
 
 '''Added'''
 * Purifier Filters for GoogleVideo & Local Flash movies (movies that are stored locally on the same server as the site). (vaughan)
